--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -2,18 +2,19 @@
   --gray-rgb: 0, 0, 0;
   --gray-alpha-200: rgba(var(--gray-rgb), 0.08);
   --gray-alpha-100: rgba(var(--gray-rgb), 0.05);
-
   --button-primary-hover: #383838;
   --button-secondary-hover: #f2f2f2;
 
   display: grid;
   grid-template-rows: 20px 1fr 20px;
-  align-items: center;
-  justify-items: center;
+
+  place-items: center center;
+
   min-height: 100svh;
   padding: 80px;
-  gap: 64px;
+
   font-family: var(--font-geist-sans);
+  gap: 64px;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -21,7 +22,6 @@
     --gray-rgb: 255, 255, 255;
     --gray-alpha-200: rgba(var(--gray-rgb), 0.145);
     --gray-alpha-100: rgba(var(--gray-rgb), 0.06);
-
     --button-primary-hover: #ccc;
     --button-secondary-hover: #1a1a1a;
   }
@@ -29,19 +29,23 @@
 
 .main {
   display: flex;
+  grid-row-start: 2;
+
   flex-direction: column;
   gap: 32px;
-  grid-row-start: 2;
 }
 
 .main ol {
-  font-family: var(--font-geist-mono);
-  padding-left: 0;
   margin: 0;
+  padding-left: 0;
+
+  list-style-position: inside;
+
+  letter-spacing: -0.01em;
+
+  font-family: var(--font-geist-mono);
   font-size: 14px;
   line-height: 24px;
-  letter-spacing: -0.01em;
-  list-style-position: inside;
 }
 
 .main li:not(:last-of-type) {
@@ -49,10 +53,12 @@
 }
 
 .main code {
-  font-family: inherit;
-  background: var(--gray-alpha-100);
   padding: 2px 4px;
+
   border-radius: 4px;
+  background: var(--gray-alpha-100);
+
+  font-family: inherit;
   font-weight: 600;
 }
 
@@ -62,36 +68,41 @@
 }
 
 .ctas a {
-  appearance: none;
-  border-radius: 128px;
-  height: 48px;
-  padding: 0 20px;
-  border: none;
-  border: 1px solid transparent;
-  transition: background 0.2s, color 0.2s, border-color 0.2s;
-  cursor: pointer;
   display: flex;
   align-items: center;
   justify-content: center;
+
+  height: 48px;
+  padding: 0 20px;
+
+  cursor: pointer;
+  transition: background 0.2s, color 0.2s, border-color 0.2s;
+
+  border: none;
+  border: 1px solid transparent;
+  border-radius: 128px;
+
   font-size: 16px;
-  line-height: 20px;
   font-weight: 500;
+  line-height: 20px;
+  appearance: none;
 }
 
 a.primary {
-  background: var(--foreground);
   color: var(--background);
+  background: var(--foreground);
   gap: 8px;
 }
 
 a.secondary {
-  border-color: var(--gray-alpha-200);
   min-width: 180px;
+
+  border-color: var(--gray-alpha-200);
 }
 
 .footer {
-  grid-row-start: 3;
   display: flex;
+  grid-row-start: 3;
   gap: 24px;
 }
 
@@ -108,13 +119,13 @@ a.secondary {
 /* Enable hover only on non-touch devices */
 @media (hover: hover) and (pointer: fine) {
   a.primary:hover {
-    background: var(--button-primary-hover);
     border-color: transparent;
+    background: var(--button-primary-hover);
   }
 
   a.secondary:hover {
-    background: var(--button-secondary-hover);
     border-color: transparent;
+    background: var(--button-secondary-hover);
   }
 
   .footer a:hover {
@@ -123,7 +134,7 @@ a.secondary {
   }
 }
 
-@media (max-width: 600px) {
+@media (width <= 600px) {
   .page {
     padding: 32px;
     padding-bottom: 80px;
@@ -142,9 +153,10 @@ a.secondary {
   }
 
   .ctas a {
-    font-size: 14px;
     height: 40px;
     padding: 0 16px;
+
+    font-size: 14px;
   }
 
   a.secondary {
@@ -152,8 +164,8 @@ a.secondary {
   }
 
   .footer {
-    flex-wrap: wrap;
     align-items: center;
+    flex-wrap: wrap;
     justify-content: center;
   }
 }
