--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,35 +1,14 @@
-:root {
-  --background: #fff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
 html,
 body {
-  overflow-x: hidden;
-
-  max-width: 100vw;
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-* {
-  box-sizing: border-box;
   margin: 0;
   padding: 0;
+
+  color: var(--black);
+  background: #F5F6F8;
+
+  font-family: "Noto Sans", system-ui;
 }
 
 a {
@@ -38,8 +17,21 @@ a {
   color: inherit;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+* {
+  box-sizing: border-box;
+}
+
+:root {
+  --black: #3B434E;
+  --gray-light: #EBEBEB;
+  --gray: #A4A4A4;
+  --gray-dark: #6C7077;
+  --white: white;
+  --primary: #7351F5;
+  --primary-hover: #6344DF;
+  --red-light: #FEA291;
+  --red: #FC836D;
+  --green: #007B48;
+  --green-light: #C8F8E4;
+  --font-family: "Noto Sans KR", sans-serif;
 }
